fix: vote behaviour & endpoints
